test/symtabTest/fail/test1.ic
class MultVarDecls {
	void main () {
		int x = 1;
		int x = 2;
	}
}